--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
   </header>
 
   <section class="hero">
-    <h2>Dispensary Marketing, Simplified</h2>
-    <p>Silzeycom delivers sleek consulting tools and smart analytics for modern cannabis brands.</p>
+    <h2>Cannabis Marketing, Simplified</h2>
+    <p>Silzeycom delivers sleek consulting solutions and powerful tools for cannabis businesses.</p>
     <a href="#contact" class="btn">Get Started</a>
   </section>
 
@@ -219,24 +219,36 @@
       <h3>What Silzeycom Offers</h3>
       <div class="cards">
         <div class="card">
-          <h4>Clean Analytics</h4>
-          <p>Visualize dispensary performance with elegant, intuitive dashboards.</p>
+          <h4>Analytics & Reporting</h4>
+          <p>Track engagement, sales, and performance across all platforms with clarity.</p>
         </div>
         <div class="card">
-          <h4>Real-Time Insights</h4>
-          <p>Stay informed on customer behaviors and trends as they happen.</p>
+          <h4>POS Integrations</h4>
+          <p>Seamlessly connect your point-of-sale system to your marketing efforts.</p>
         </div>
         <div class="card">
-          <h4>Campaign Automation</h4>
-          <p>Set, launch, and optimize promotions effortlessly across platforms.</p>
+          <h4>Social Media Management</h4>
+          <p>Automate, schedule, and analyze your cannabis brand’s social presence.</p>
         </div>
         <div class="card">
-          <h4>Consulting Services</h4>
-          <p>Custom-tailored strategy and compliance help for cannabis businesses.</p>
+          <h4>Email & SMS Campaigns</h4>
+          <p>Build loyalty and boost retention with targeted customer communication.</p>
         </div>
         <div class="card">
-          <h4>Growth Tools</h4>
-          <p>Expand reach and ROI with targeting, segmentation, and conversion tracking.</p>
+          <h4>Consulting & Strategy</h4>
+          <p>Expert guidance for compliance, branding, and growth within the cannabis space.</p>
+        </div>
+        <div class="card">
+          <h4>Creative Services</h4>
+          <p>Design assets and branding tailored for modern dispensary marketing.</p>
+        </div>
+        <div class="card">
+          <h4>Paid Advertising</h4>
+          <p>Drive conversions with data-backed campaigns tailored to cannabis audiences.</p>
+        </div>
+        <div class="card">
+          <h4>SEO & Web Optimization</h4>
+          <p>Improve visibility and search ranking to attract and retain customers.</p>
         </div>
       </div>
     </div>
@@ -245,7 +257,7 @@
   <section id="about" class="about">
     <div class="container">
       <h3>About Silzeycom</h3>
-      <p>We’re a creative marketing and consulting firm dedicated to helping dispensaries thrive with intuitive tools and smart strategies. Our designs are Apple-inspired — clean, bold, and effective.</p>
+      <p>Silzeycom is a creative marketing and consulting firm serving the cannabis industry. We help dispensaries grow through clean design, smart tools, and personalized strategy.</p>
     </div>
   </section>
 
@@ -262,7 +274,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Silzeycom. Marketing designed for modern dispensaries.</p>
+    <p>&copy; 2025 Silzeycom. Marketing and consulting for modern cannabis businesses.</p>
   </footer>
 
   <script>
@@ -282,5 +294,3 @@
   </script>
 </body>
 </html>
-
-
