--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Silzeycom</title>
+  <link rel="icon" href="https://chatgpt.com/s/m_6826a85f85708191b1dab1b2a58a5e96" type="image/png">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icons/icon-192.png">
   <meta name="theme-color" content="#00aaff"/>
@@ -233,5 +234,6 @@
 
 </body>
 </html>
+
 
 
