--- a/index.html
+++ b/index.html
@@ -208,7 +208,46 @@
     <div class="container">
       <h3>What Silzeycom Offers</h3>
       <div class="cards">
-        <!-- existing cards here -->
+        <div class="card">
+          <h4>Analytics</h4>
+          <p>Track your dispensary's growth with intelligent, intuitive data dashboards.</p>
+        </div>
+        <div class="card">
+          <h4>POS Integration</h4>
+          <p>Connect your sales system with marketing tools for smoother operations.</p>
+        </div>
+        <div class="card">
+          <h4>Email Marketing</h4>
+          <p>Send beautiful campaigns and automate customer engagement.</p>
+        </div>
+        <div class="card">
+          <h4>SMS Campaigns</h4>
+          <p>Direct, effective communication with your customer base via text.</p>
+        </div>
+        <div class="card">
+          <h4>Consulting Services</h4>
+          <p>Expert cannabis industry guidance, strategy, and compliance support.</p>
+        </div>
+        <div class="card">
+          <h4>Brand Design</h4>
+          <p>Craft a recognizable, professional identity tailored to your dispensary.</p>
+        </div>
+        <div class="card">
+          <h4>Ad Campaigns</h4>
+          <p>Run optimized, ROI-focused advertising across platforms like Meta and Google.</p>
+        </div>
+        <div class="card">
+          <h4>SEO & Web Presence</h4>
+          <p>Boost discoverability with cannabis-friendly search engine strategies.</p>
+        </div>
+        <div class="card">
+          <h4>Influencer Collabs</h4>
+          <p>Partner with local creators to boost visibility and trust.</p>
+        </div>
+        <div class="card">
+          <h4>Customer Loyalty</h4>
+          <p>Build long-term relationships with loyalty programs and referral incentives.</p>
+        </div>
       </div>
     </div>
   </section>
