--- a/index.html
+++ b/index.html
@@ -131,69 +131,14 @@
       font-size: 1rem;
       color: #333;
     }
-    .about, .contact, .gallery, .charts {
-      padding: 4rem 1rem;
-      text-align: center;
-      background: #fff;
-      margin-top: 2rem;
-      box-shadow: 0 4px 12px var(--shadow-color);
-    }
-    .gallery img {
-      max-width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px var(--shadow-color);
-      margin: 1rem;
-      width: 300px;
-    }
-    .charts canvas {
-      margin: 2rem auto;
-      max-width: 600px;
-    }
-    .contact form {
-      max-width: 400px;
-      margin: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-    }
-    button.btn {
-      background: var(--blue);
-      color: white;
-      padding: 1rem;
-      border: none;
-      border-radius: 30px;
-      font-size: 1rem;
-      cursor: pointer;
-      box-shadow: 0 4px 12px var(--shadow-color);
-      transition: background 0.3s ease;
-    }
-    button.btn:hover {
-      background: var(--dark-blue);
-    }
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      font-size: 0.9rem;
-      color: #555;
-    }
   </style>
 </head>
 <body>
-
   <header>
     <h1><a href="#hero">Silzeycom</a></h1>
     <nav>
       <a href="#features">Features</a>
       <a href="#about">About</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#charts">Insights</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -230,47 +175,5 @@
         </div>
         <div class="card">
           <h4>Brand Design</h4>
-          <p>Craft a recognizable, professional identity tailored to your dispensary.</p>
-        </div>
-        <div class="card">
-          <h4>Ad Campaigns</h4>
-          <p>Run optimized, ROI-focused advertising across platforms like Meta and Google.</p>
-        </div>
-        <div class="card">
-          <h4>SEO & Web Presence</h4>
-          <p>Boost discoverability with cannabis-friendly search engine strategies.</p>
-        </div>
-        <div class="card">
-          <h4>Influencer Collabs</h4>
-          <p>Partner with local creators to boost visibility and trust.</p>
-        </div>
-        <div class="card">
-          <h4>Customer Loyalty</h4>
-          <p>Build long-term relationships with loyalty programs and referral incentives.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="gallery" id="gallery">
-    <div class="container">
-      <h3>Gallery</h3>
-      <img src="https://images.unsplash.com/photo-1578425575246-5aa0d1c6a68e?auto=format&fit=crop&w=600&q=80" alt="Dispensary 1">
-      <img src="https://images.unsplash.com/photo-1596743308780-4d5650af8d7c?auto=format&fit=crop&w=600&q=80" alt="Dispensary 2">
-      <img src="https://images.unsplash.com/photo-1605696723531-cc65efc42ee2?auto=format&fit=crop&w=600&q=80" alt="Cannabis Product">
-      <img src="https://images.unsplash.com/photo-1626231948897-1e390a7f745c?auto=format&fit=crop&w=600&q=80" alt="Vape Product">
-      <img src="https://images.unsplash.com/photo-1622473592342-6c5f7a7d22e2?auto=format&fit=crop&w=600&q=80" alt="Cannabis Flower">
-    </div>
-  </section>
-
-  <section class="charts" id="charts">
-    <div class="container">
-      <h3>Business Insights</h3>
-      <canvas id="salesChart"></canvas>
-      <canvas id="customerChart"></canvas>
-    </div>
-  </section>
-
-</body>
-</html>
-
+          <p>Craft a recognizable, professio
+    }
