--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       padding: 6rem 1rem;
       text-align: center;
       box-shadow: 0 6px 16px var(--shadow-color);
+      transition: all 0.4s ease-in-out;
     }
     .hero h2 {
       font-size: 3rem;
@@ -131,6 +132,50 @@
       font-size: 1rem;
       color: #333;
     }
+    .about, .contact {
+      background: #fff;
+      padding: 4rem 1rem;
+      text-align: center;
+      box-shadow: 0 4px 12px var(--shadow-color);
+      margin-top: 2rem;
+    }
+    .contact form {
+      max-width: 400px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 1rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+    button.btn {
+      background: var(--blue);
+      color: white;
+      padding: 1rem;
+      border: none;
+      border-radius: 30px;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 4px 12px var(--shadow-color);
+      transition: background 0.3s ease;
+    }
+    button.btn:hover {
+      background: var(--dark-blue);
+    }
+    @media (max-width: 768px) {
+      .cards {
+        flex-direction: column;
+        align-items: center;
+      }
+      .hero h2 {
+        font-size: 2.2rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -175,5 +220,45 @@
         </div>
         <div class="card">
           <h4>Brand Design</h4>
-          <p>Craft a recognizable, professio
-    }
+          <p>Craft a recognizable, professional identity tailored to your dispensary.</p>
+        </div>
+        <div class="card">
+          <h4>Ad Campaigns</h4>
+          <p>Run optimized, ROI-focused advertising across platforms like Meta and Google.</p>
+        </div>
+        <div class="card">
+          <h4>SEO & Web Presence</h4>
+          <p>Boost discoverability with cannabis-friendly search engine strategies.</p>
+        </div>
+        <div class="card">
+          <h4>Influencer Collabs</h4>
+          <p>Partner with local creators to boost visibility and trust.</p>
+        </div>
+        <div class="card">
+          <h4>Customer Loyalty</h4>
+          <p>Build long-term relationships with loyalty programs and referral incentives.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="about" id="about">
+    <div class="container">
+      <h3>About Silzeycom</h3>
+      <p>Silzeycom is a marketing and consulting firm dedicated to helping cannabis businesses thrive in the digital world. We deliver powerful strategies and data-driven tools with a clean, modern design philosophy.</p>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <div class="container">
+      <h3>Contact Us</h3>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea rows="5" placeholder="Your Message" required></textarea>
+        <button class="btn" type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+</body>
+</html>
