--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       --blue: #00aaff;
       --dark-blue: #0088cc;
       --shadow-color: rgba(0, 0, 0, 0.2);
+      --background-dark: #1a1a1a;
+      --text-light: #eaeaea;
     }
     * {
       margin: 0;
@@ -29,6 +31,11 @@
       background-color: var(--light-gray);
       color: var(--main-text);
       line-height: 1.5;
+      transition: background 0.3s, color 0.3s;
+    }
+    body.dark {
+      background-color: var(--background-dark);
+      color: var(--text-light);
     }
     .container {
       max-width: 1100px;
@@ -36,10 +43,16 @@
       padding: 3rem 1rem;
     }
     header {
-      text-align: center;
-      padding: 2rem 0;
+      position: sticky;
+      top: 0;
       background: #fff;
+      z-index: 1000;
+      padding: 2rem 0;
       box-shadow: 0 4px 12px var(--shadow-color);
+      transition: background 0.3s ease;
+    }
+    body.dark header {
+      background: #333;
     }
     header h1 a {
       text-decoration: none;
@@ -185,6 +198,7 @@
       <a href="#features">Features</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <a href="#darkmode" onclick="toggleDarkMode()">Dark Mode</a>
     </nav>
   </header>
 
@@ -198,46 +212,21 @@
     <div class="container">
       <h3>What Silzeycom Offers</h3>
       <div class="cards">
-        <div class="card">
-          <h4>Analytics</h4>
-          <p>Track your dispensary's growth with intelligent, intuitive data dashboards.</p>
-        </div>
-        <div class="card">
-          <h4>POS Integration</h4>
-          <p>Connect your sales system with marketing tools for smoother operations.</p>
-        </div>
-        <div class="card">
-          <h4>Email Marketing</h4>
-          <p>Send beautiful campaigns and automate customer engagement.</p>
-        </div>
-        <div class="card">
-          <h4>SMS Campaigns</h4>
-          <p>Direct, effective communication with your customer base via text.</p>
-        </div>
-        <div class="card">
-          <h4>Consulting Services</h4>
-          <p>Expert cannabis industry guidance, strategy, and compliance support.</p>
-        </div>
-        <div class="card">
-          <h4>Brand Design</h4>
-          <p>Craft a recognizable, professional identity tailored to your dispensary.</p>
-        </div>
-        <div class="card">
-          <h4>Ad Campaigns</h4>
-          <p>Run optimized, ROI-focused advertising across platforms like Meta and Google.</p>
-        </div>
-        <div class="card">
-          <h4>SEO & Web Presence</h4>
-          <p>Boost discoverability with cannabis-friendly search engine strategies.</p>
-        </div>
-        <div class="card">
-          <h4>Influencer Collabs</h4>
-          <p>Partner with local creators to boost visibility and trust.</p>
-        </div>
-        <div class="card">
-          <h4>Customer Loyalty</h4>
-          <p>Build long-term relationships with loyalty programs and referral incentives.</p>
-        </div>
+        <div class="card"><h4>Analytics</h4><p>Track your dispensary's growth with intelligent, intuitive data dashboards.</p></div>
+        <div class="card"><h4>POS Integration</h4><p>Connect your sales system with marketing tools for smoother operations.</p></div>
+        <div class="card"><h4>Email Marketing</h4><p>Send beautiful campaigns and automate customer engagement.</p></div>
+        <div class="card"><h4>SMS Campaigns</h4><p>Direct, effective communication with your customer base via text.</p></div>
+        <div class="card"><h4>Consulting Services</h4><p>Expert cannabis industry guidance, strategy, and compliance support.</p></div>
+        <div class="card"><h4>Brand Design</h4><p>Craft a recognizable, professional identity tailored to your dispensary.</p></div>
+        <div class="card"><h4>Ad Campaigns</h4><p>Run optimized, ROI-focused advertising across platforms like Meta and Google.</p></div>
+        <div class="card"><h4>SEO & Web Presence</h4><p>Boost discoverability with cannabis-friendly search engine strategies.</p></div>
+        <div class="card"><h4>Influencer Collabs</h4><p>Partner with local creators to boost visibility and trust.</p></div>
+        <div class="card"><h4>Customer Loyalty</h4><p>Build long-term relationships with loyalty programs and referral incentives.</p></div>
+        <div class="card"><h4>Social Media Strategy</h4><p>Grow organically through smart TikTok and Instagram plans.</p></div>
+        <div class="card"><h4>Reputation Management</h4><p>Monitor and enhance your public perception across platforms.</p></div>
+        <div class="card"><h4>Packaging Strategy</h4><p>Create compliant, beautiful packaging that aligns with your brand.</p></div>
+        <div class="card"><h4>Event Marketing</h4><p>Attract foot traffic with local events and promotional campaigns.</p></div>
+        <div class="card"><h4>Data Compliance</h4><p>Keep your business safe with HIPAA and cannabis-specific compliance help.</p></div>
       </div>
     </div>
   </section>
@@ -252,7 +241,7 @@
   <section class="contact" id="contact">
     <div class="container">
       <h3>Contact Us</h3>
-      <form>
+      <form onsubmit="event.preventDefault(); alert('Message sent successfully!');">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea rows="5" placeholder="Your Message" required></textarea>
@@ -260,5 +249,12 @@
       </form>
     </div>
   </section>
+
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+    }
+  </script>
 </body>
 </html>
+
