--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       --blue: #00aaff;
       --dark-blue: #0088cc;
       --shadow-color: rgba(0, 0, 0, 0.2);
-      --background-dark: #1a1a1a;
-      --text-light: #eaeaea;
     }
     * {
       margin: 0;
@@ -31,28 +29,20 @@
       background-color: var(--light-gray);
       color: var(--main-text);
       line-height: 1.5;
-      transition: background 0.3s, color 0.3s;
+      transition: background 0.3s ease, color 0.3s ease;
     }
     body.dark {
-      background-color: var(--background-dark);
-      color: var(--text-light);
-    }
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 3rem 1rem;
+      background-color: #1d1d1f;
+      color: #f5f5f7;
     }
     header {
+      text-align: center;
+      padding: 2rem 0;
+      background: #fff;
+      box-shadow: 0 4px 12px var(--shadow-color);
       position: sticky;
       top: 0;
-      background: #fff;
       z-index: 1000;
-      padding: 2rem 0;
-      box-shadow: 0 4px 12px var(--shadow-color);
-      transition: background 0.3s ease;
-    }
-    body.dark header {
-      background: #333;
     }
     header h1 a {
       text-decoration: none;
@@ -77,7 +67,6 @@
       padding: 6rem 1rem;
       text-align: center;
       box-shadow: 0 6px 16px var(--shadow-color);
-      transition: all 0.4s ease-in-out;
     }
     .hero h2 {
       font-size: 3rem;
@@ -131,6 +120,7 @@
       perspective: 1000px;
       text-decoration: none;
       display: block;
+      animation: fadeIn 0.6s ease-in-out;
     }
     .card:hover {
       transform: translateY(-10px) scale(1.03);
@@ -145,12 +135,16 @@
       font-size: 1rem;
       color: #333;
     }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     .about, .contact {
-      background: #fff;
       padding: 4rem 1rem;
       text-align: center;
-      box-shadow: 0 4px 12px var(--shadow-color);
+      background: #fff;
       margin-top: 2rem;
+      box-shadow: 0 4px 12px var(--shadow-color);
     }
     .contact form {
       max-width: 400px;
@@ -180,13 +174,19 @@
     button.btn:hover {
       background: var(--dark-blue);
     }
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      color: #555;
+    }
     @media (max-width: 768px) {
+      .hero h2 {
+        font-size: 2rem;
+      }
       .cards {
         flex-direction: column;
         align-items: center;
-      }
-      .hero h2 {
-        font-size: 2.2rem;
       }
     }
   </style>
@@ -198,7 +198,7 @@
       <a href="#features">Features</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-      <a href="#darkmode" onclick="toggleDarkMode()">Dark Mode</a>
+      <a href="#" onclick="toggleDarkMode()">Dark Mode</a>
     </nav>
   </header>
 
@@ -212,21 +212,21 @@
     <div class="container">
       <h3>What Silzeycom Offers</h3>
       <div class="cards">
-        <div class="card"><h4>Analytics</h4><p>Track your dispensary's growth with intelligent, intuitive data dashboards.</p></div>
-        <div class="card"><h4>POS Integration</h4><p>Connect your sales system with marketing tools for smoother operations.</p></div>
-        <div class="card"><h4>Email Marketing</h4><p>Send beautiful campaigns and automate customer engagement.</p></div>
-        <div class="card"><h4>SMS Campaigns</h4><p>Direct, effective communication with your customer base via text.</p></div>
-        <div class="card"><h4>Consulting Services</h4><p>Expert cannabis industry guidance, strategy, and compliance support.</p></div>
-        <div class="card"><h4>Brand Design</h4><p>Craft a recognizable, professional identity tailored to your dispensary.</p></div>
-        <div class="card"><h4>Ad Campaigns</h4><p>Run optimized, ROI-focused advertising across platforms like Meta and Google.</p></div>
-        <div class="card"><h4>SEO & Web Presence</h4><p>Boost discoverability with cannabis-friendly search engine strategies.</p></div>
-        <div class="card"><h4>Influencer Collabs</h4><p>Partner with local creators to boost visibility and trust.</p></div>
-        <div class="card"><h4>Customer Loyalty</h4><p>Build long-term relationships with loyalty programs and referral incentives.</p></div>
-        <div class="card"><h4>Social Media Strategy</h4><p>Grow organically through smart TikTok and Instagram plans.</p></div>
-        <div class="card"><h4>Reputation Management</h4><p>Monitor and enhance your public perception across platforms.</p></div>
-        <div class="card"><h4>Packaging Strategy</h4><p>Create compliant, beautiful packaging that aligns with your brand.</p></div>
-        <div class="card"><h4>Event Marketing</h4><p>Attract foot traffic with local events and promotional campaigns.</p></div>
-        <div class="card"><h4>Data Compliance</h4><p>Keep your business safe with HIPAA and cannabis-specific compliance help.</p></div>
+        <a href="analytics.html" class="card"><h4>Analytics</h4><p>Track your dispensary's growth with intelligent dashboards.</p></a>
+        <a href="pos-integration.html" class="card"><h4>POS Integration</h4><p>Connect your POS system with your marketing.</p></a>
+        <a href="email-marketing.html" class="card"><h4>Email Marketing</h4><p>Send automated and personalized campaigns.</p></a>
+        <a href="sms-campaigns.html" class="card"><h4>SMS Campaigns</h4><p>Engage customers directly via text.</p></a>
+        <a href="consulting-services.html" class="card"><h4>Consulting Services</h4><p>Professional cannabis business guidance.</p></a>
+        <a href="brand-design.html" class="card"><h4>Brand Design</h4><p>Build a modern, sleek identity.</p></a>
+        <a href="ad-campaigns.html" class="card"><h4>Ad Campaigns</h4><p>Run ROI-focused ads across platforms.</p></a>
+        <a href="seo-web.html" class="card"><h4>SEO & Web Presence</h4><p>Improve online visibility with SEO.</p></a>
+        <a href="influencer-collabs.html" class="card"><h4>Influencer Collabs</h4><p>Collaborate with creators to grow your brand.</p></a>
+        <a href="customer-loyalty.html" class="card"><h4>Customer Loyalty</h4><p>Retention through programs and rewards.</p></a>
+        <a href="market-research.html" class="card"><h4>Market Research</h4><p>Informed decisions through insights.</p></a>
+        <a href="social-strategy.html" class="card"><h4>Social Strategy</h4><p>Platform-specific marketing guidance.</p></a>
+        <a href="content-creation.html" class="card"><h4>Content Creation</h4><p>Videos, graphics, and social media posts.</p></a>
+        <a href="data-security.html" class="card"><h4>Data Security</h4><p>Keep customer data safe and compliant.</p></a>
+        <a href="event-promotion.html" class="card"><h4>Event Promotion</h4><p>Drive attendance to your brand events.</p></a>
       </div>
     </div>
   </section>
@@ -250,6 +250,10 @@
     </div>
   </section>
 
+  <footer>
+    <p>&copy; 2025 Silzeycom. All rights reserved.</p>
+  </footer>
+
   <script>
     function toggleDarkMode() {
       document.body.classList.toggle('dark');
@@ -257,4 +261,3 @@
   </script>
 </body>
 </html>
-
